--- a/dynamic/src/main/AndroidManifest.xml
+++ b/dynamic/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:dist="http://schemas.android.com/apk/distribution"
-    package="com.rave.gitmultimoduletestapp">
+    package="com.rave.gitdynamicfeaturemoduletestapp">
 
     <application
         android:allowBackup="true"
@@ -12,13 +11,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GitMultiModuleTestApp"
-        tools:replace="android:theme"
+        android:theme="@style/Theme.GitDynamicFeatureModuleTestApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ComposeActivity"
             android:exported="true"
-            android:theme="@style/Theme.GitMultiModuleTestApp.NoActionBar">
+            android:theme="@style/Theme.GitDynamicFeatureModuleTestApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,4 +24,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
